# crux

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE_RULES.md  BETA_TESTING_CHECKLIST.md  OLLAMA_ISSUES.md  PUBLISHING.md  README.md  TODO_CHECKLIST.md  providers-system-instructions.md  pyproject.toml  requirements.txt  shell_prefs.db
.github/agents/: metriplectic-researcher.agent.md  physicist-engineer.agent.md
.github/chatmodes/: independent-assistant.chatmode.md
.github/instructions/: .assistant_guides.instructions.md  architecture-rules.instructions.md  codacy.instructions.md  providers-project-instructions.instructions.md
.github/workflows/: provider-governance.yml  providers-fast-tests.yml  publish.yml
archive/: BETA_TESTING_CHECKLIST.md
crux_providers/: README.md  __init__.py
crux_providers/.codacy/: cli.sh
crux_providers/anthropic/: README.md  __init__.py  chat_helpers.py  client.py  get_anthropic_models.py  helpers.py  stream_helpers.py
crux_providers/base/: __init__.py  cancellation.py  constants.py  errors.py  factory.py  get_models_base.py  interfaces.py  logging.py  models.py  stubs.py  timeouts.py  tracing.py
crux_providers/config/: __init__.py  capability_matrix.json  defaults.py  env.py  provider_governance.json
crux_providers/deepseek/: README.md  __init__.py  client.py  get_deepseek_models.py
crux_providers/di/: __init__.py  container.py
crux_providers/gemini/: README.md  __init__.py  client.py  get_gemini_models.py
crux_providers/mock/: __init__.py  client.py
crux_providers/ollama/: README.md  __init__.py  _cli.py  _table_parser.py  client.py  get_ollama_models.py  helpers.py  ollama-models.json
crux_providers/openai/: README.md  __init__.py  client.py  get_openai_models.py  openai-models.json  openai-observed-capabilities.json  openai_chat.py  openai_legacy.py  openai_streaming.py
crux_providers/openrouter/: README.md  __init__.py  chat_helpers.py  client.py  get_openrouter_models.py  helpers.py  stream_helpers.py
crux_providers/service/: __init__.py  app.py  benchmark.py  chat_request_build.py  chat_stream.py  db.py  db_schema.py  dev_server.py  helpers.py  model_catalog_loader.py  model_registry_store.py
crux_providers/tests/: conftest.py  test_adapter_params.py  test_app_chat_stream.py  (+47 more)
docs/: ARCHITECTURE_DECISIONS.md  BETA_TESTING_CHECKLIST.md  Github-dlr.md  IMPLEMENTATION_SUMMARY.md  MemoriPilot.md  NEW_CAPABILITIES.md  OLLAMA_ISSUES.md  README.md  SETUP_GUIDE.md  UNIVERSAL_FRAMEWORK.md  UNIVERSAL_FRAMEWORK_GUIDE.md
tests/: test_architecture_rules.py  test_new_capabilities.py
(+252 files in other folders)
