[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crux-providers"
version = "0.1.0"
description = "A reliable, provider-agnostic LLM abstraction layer (Hybrid Clean Architecture)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Justin Lietz" }]
keywords = ["llm", "providers", "openai", "anthropic", "ollama", "gemini", "streaming"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
# Core stays light so `pip install crux-providers` does not drag in every SDK.
dependencies = [
  "pydantic>=2.7,<3",
  "httpx>=0.27",
  "pyyaml>=6",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
gemini = ["google-generativeai>=0.7"]
ollama = ["ollama>=0.3"]
openrouter = ["openai>=1.0"]
deepseek = ["openai>=1.0"]
xai = ["openai>=1.0"]
service = ["fastapi>=0.110", "uvicorn>=0.29"]
all = [
  "openai>=1.0", "anthropic>=0.40", "google-generativeai>=0.7",
  "ollama>=0.3", "fastapi>=0.110", "uvicorn>=0.29",
]
dev = ["pytest>=8", "pytest-cov", "ruff>=0.6", "build", "twine"]

[project.urls]
Homepage = "https://github.com/justinlietz93/crux"
Source = "https://github.com/justinlietz93/crux"

[tool.hatch.build.targets.wheel]
packages = ["crux_providers"]

[tool.hatch.build.targets.sdist]
include = ["crux_providers", "README.md", "LICENSE*"]
